syntax = "proto3";

package actionpb;

option go_package = "./actionpb";

import "common.proto";
import "search.proto";

message PromptArgs {
    repeated string inspirationFiles = 1;
    repeated string excludeFiles = 2;
    string prompt = 3;
    repeated SearchArgs searchArgss = 4;
    repeated Message thread = 6;
}
message PromptRequest {
    PromptArgs promptArgs = 1;
}
message PromptResponse {
    repeated Message thread = 1;
}
